@@ -5,6 +5,7 @@ import java.util.stream.Collectors;
 
 import org.arsw.maze_rush.common.exceptions.BadRequestException;
 import org.arsw.maze_rush.common.exceptions.ConflictException;
+import org.arsw.maze_rush.common.exceptions.LobbyInUseException;
 import org.arsw.maze_rush.common.exceptions.NotFoundException;
 import org.arsw.maze_rush.common.exceptions.UnauthorizedException;
 import org.slf4j.Logger;
@@ -26,7 +27,7 @@ public class GlobalExceptionHandler {
     public ResponseEntity<ApiError> handleValidationException(MethodArgumentNotValidException ex, WebRequest request) {
         List<String> details = ex.getBindingResult().getFieldErrors().stream()
                 .map(this::formatFieldError)
-                .collect(Collectors.toList());
+                .toList();
         ApiError error = new ApiError();
         error.setStatus(HttpStatus.BAD_REQUEST.value());
         error.setError(HttpStatus.BAD_REQUEST.getReasonPhrase());
@@ -54,6 +55,16 @@ public class GlobalExceptionHandler {
     @ExceptionHandler(BadRequestException.class)
     public ResponseEntity<ApiError> handleBadRequest(BadRequestException ex, WebRequest request) {
         return build(HttpStatus.BAD_REQUEST, ex.getMessage(), request);
+    }
+
+    @ExceptionHandler(LobbyInUseException.class)
+    public ResponseEntity<ApiError> handleLobbyInUse(LobbyInUseException ex, WebRequest request) {
+        return build(HttpStatus.CONFLICT, ex.getMessage(), request);
+    }
+
+    @ExceptionHandler(IllegalStateException.class)
+    public ResponseEntity<ApiError> handleIllegalState(IllegalStateException ex, WebRequest request) {
+        return build(HttpStatus.CONFLICT, ex.getMessage(), request);
     }
 
     @ExceptionHandler(Exception.class)
